[package]
name = "diff-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crates
diff-types = { path = "../diff-types" }
diff-db    = { path = "../diff-db" }

# Alloy trie for MPT construction and proof generation
alloy-trie      = "0.7"
alloy-primitives = "1.5.6"
alloy-rlp       = "0.3"

# Reth primitives for BlockNumHash, B256 etc
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0a9af7907f2d52f7183994a053104268c9cad7ef" }

# Serialization for the proof output
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling and logging
eyre    = "0.6"
tracing = "0.1"

# Hex encoding for proof node bytes in output
hex = "0.4"