[package]
name = "diff-stage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crates
diff-types = { path = "../diff-types" }
diff-db    = { path = "../diff-db" }

# Reth stage primitives — same pinned commit everywhere
reth-stages-api = { git = "https://github.com/paradigmxyz/reth", rev = "0a9af7907f2d52f7183994a053104268c9cad7ef" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0a9af7907f2d52f7183994a053104268c9cad7ef" }
reth-node-types          = { git = "https://github.com/paradigmxyz/reth", rev = "0a9af7907f2d52f7183994a053104268c9cad7ef" }

# Error handling and logging
eyre    = "0.6"
tracing = "0.1"

# SQLite — same version as diff-db uses
rusqlite = { version = "0.31", features = ["bundled"] }