[package]
name             = "diff-types"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
alloy-primitives = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
eyre             = { workspace = true }
